[package]
name = "leetcode-solutions-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "assist",
    "easy",
    "medium",
    "hard",
]

[dependencies]
easy = { path = "./easy" }
medium = { path = "./medium" }
hard = { path = "./hard" }
